{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 920,
  "lineage": "b55056dc-c36f-59a5-7440-c55f89d4d7d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d50a9cdea921ed2",
            "association_id": "eipassoc-0ac2ad027dc463a90",
            "domain": "vpc",
            "id": "eipalloc-01d50a9cdea921ed2",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e43dfa1dcc3b3185",
            "private_dns": "ip-10-0-1-215.us-east-2.compute.internal",
            "private_ip": "10.0.1.215",
            "public_dns": "ec2-3-140-237-218.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.237.218",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.ethernet",
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_security_group.allow_ssh",
            "module.myvpc.aws_subnet.subnet",
            "module.myvpc.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "meanstack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:011096892692:instance/i-07340f8c273e94a98",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07340f8c273e94a98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e378c241257f5e11",
            "private_dns": "ip-10-0-1-185.us-east-2.compute.internal",
            "private_ip": "10.0.1.185",
            "public_ip": "18.190.28.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a98107ebe0208584",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07606e6d7bb4bd8d3",
            "tags": {
              "Name": "Production-ec2"
            },
            "tags_all": {
              "Name": "Production-ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f3ba9cbc9389372a"
            ]
          },
          "dependencies": [
            "module.keypair.aws_key_pair.Webserver-key",
            "module.myvpc.aws_security_group.allow_ssh",
            "module.myvpc.aws_subnet.subnet",
            "module.myvpc.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ethernet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011096892692:network-interface/eni-0e43dfa1dcc3b3185",
            "id": "eni-0e43dfa1dcc3b3185",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "06:b3:a8:ca:2b:6a",
            "owner_id": "011096892692",
            "private_ip": "10.0.1.215",
            "private_ips": [
              "10.0.1.215"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f3ba9cbc9389372a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07606e6d7bb4bd8d3"
          },
          "dependencies": [
            "module.myvpc.aws_security_group.allow_ssh",
            "module.myvpc.aws_subnet.subnet",
            "module.myvpc.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.myvpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011096892692:internet-gateway/igw-0bff3dd6a62bd78a6",
            "id": "igw-0bff3dd6a62bd78a6",
            "owner_id": "011096892692",
            "tags": {
              "Name": "Production-igw"
            },
            "tags_all": {
              "Name": "Production-igw"
            },
            "vpc_id": "vpc-000dabd679810ab31"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable",
      "provider": "module.myvpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011096892692:route-table/rtb-0ec364a70c40c2c57",
            "id": "rtb-0ec364a70c40c2c57",
            "owner_id": "011096892692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bff3dd6a62bd78a6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Production-rt"
            },
            "tags_all": {
              "Name": "Production-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-000dabd679810ab31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "module.myvpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0619aa06af4fc4858",
            "route_table_id": "rtb-0ec364a70c40c2c57",
            "subnet_id": "subnet-07606e6d7bb4bd8d3"
          },
          "dependencies": [
            "module.myvpc.aws_internet_gateway.igw",
            "module.myvpc.aws_route_table.routetable",
            "module.myvpc.aws_subnet.subnet",
            "module.myvpc.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "module.myvpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011096892692:security-group/sg-0f3ba9cbc9389372a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3ba9cbc9389372a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220110040628515600000001",
            "name_prefix": "terraform-",
            "owner_id": "011096892692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-000dabd679810ab31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "module.myvpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011096892692:subnet/subnet-07606e6d7bb4bd8d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07606e6d7bb4bd8d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011096892692",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Production-subnet-1"
            },
            "tags_all": {
              "Name": "Production-subnet-1"
            },
            "vpc_id": "vpc-000dabd679810ab31"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp-vpc",
      "provider": "module.myvpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011096892692:vpc/vpc-000dabd679810ab31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ca449a115c11866",
            "default_route_table_id": "rtb-007b8fc5ec9e9ef3c",
            "default_security_group_id": "sg-04faecd403b65b267",
            "dhcp_options_id": "dopt-06f8d8b9076c873b0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-000dabd679810ab31",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-007b8fc5ec9e9ef3c",
            "owner_id": "011096892692",
            "tags": {
              "Name": "Production"
            },
            "tags_all": {
              "Name": "Production"
            }
          }
        }
      ]
    }
  ]
}